Login and submiting code finished

--- a/Magnus.Futbot.Api/appsettings.Development.json
+++ b/Magnus.Futbot.Api/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "Magnus:URLS:SSO:Api" : "https://magnus-sso.azurewebsites.net/api"
 }
