--- a/Magnus.Futbot.Api/Magnus.Futbot.Api.csproj
+++ b/Magnus.Futbot.Api/Magnus.Futbot.Api.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.18.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.16.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.2.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="102.0.5005.6102" />
