--- a/Magnus.Futbot.Api/Magnus.Futbot.Api.csproj
+++ b/Magnus.Futbot.Api/Magnus.Futbot.Api.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
-    <PackageReference Include="Magnus2311.Futbot.Common" Version="0.0.5" />
+    <PackageReference Include="Magnus2311.Futbot.Common" Version="0.0.12" />
     <PackageReference Include="Microsoft.Azure.SignalR" Version="1.18.1" />
     <PackageReference Include="MongoDB.Bson" Version="2.16.1" />
     <PackageReference Include="Selenium.WebDriver" Version="4.3.0" />
@@ -19,6 +19,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Magnus.Futbot.Database\Magnus.Futbot.Database.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Kafka\Consumers\" />
   </ItemGroup>
 
 </Project>
