--- a/Magnus.Futbot.Api/Magnus.Futbot.Api.csproj
+++ b/Magnus.Futbot.Api/Magnus.Futbot.Api.csproj
@@ -16,6 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Magnus.Futbot.Common\Magnus.Futbot.Common\Magnus.Futbot.Common.csproj" />
+    <ProjectReference Include="..\..\Magnus.Futbot.Initializer\Magnus.Futbot.Initializer\Magnus.Futbot.Initializer.csproj" />
+    <ProjectReference Include="..\..\Magnus.Futbot.Selenium\Magnus.Futbot.Selenium\Magnus.Futbot.Selenium.csproj" />
     <ProjectReference Include="..\Magnus.Futbot.Database\Magnus.Futbot.Database.csproj" />
   </ItemGroup>
 
