--- a/Magnus.Futbot.Api/Magnus.Futbot.Api.csproj
+++ b/Magnus.Futbot.Api/Magnus.Futbot.Api.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Magnus.Futbot.Database\Magnus.Futbot.Database.csproj" />
+    <ProjectReference Include="..\Magnus.Futbot.Initializer\Magnus.Futbot.Initializer.csproj" />
   </ItemGroup>
 
 </Project>
