--- a/Magnus.Futbot.Selenium/Magnus.Futbot.Selenium.csproj
+++ b/Magnus.Futbot.Selenium/Magnus.Futbot.Selenium.csproj
@@ -8,10 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="1.9.0" />
-    <PackageReference Include="Magnus2311.Futbot.Common" Version="0.0.12" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Magnus.Futbot.Common\Magnus.Futbot.Common.csproj" />
   </ItemGroup>
 </Project>
