--- a/Magnus.Futbot.Selenium/Magnus.Futbot.Selenium.csproj
+++ b/Magnus.Futbot.Selenium/Magnus.Futbot.Selenium.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.3.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="105.0.5195.5200" />
   </ItemGroup>
 
   <ItemGroup>
