--- a/Magnus.Futbot.Api/appsettings.Development.json
+++ b/Magnus.Futbot.Api/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Magnus:URLS:SSO:Api" : "https://magnus-sso.azurewebsites.net/api"
+  "Magnus:URLS:SSO:Api": "https://magnus-sso.azurewebsites.net/api",
+  "DB:Futbot:Username": "FidoDidoo100",
+  "DB:Futbot:Password": "A123123123a",
+  "DB:Futbot:Cluster": "fbcluster",
+  "DB:Futbot:Collection":  "futbot"
 }
