--- a/Magnus.Futbot.Api/Magnus.Futbot.Api.csproj
+++ b/Magnus.Futbot.Api/Magnus.Futbot.Api.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\Magnus.Futbot.Initializer\Magnus.Futbot.Initializer.csproj" />
     <ProjectReference Include="..\Magnus.Futbot.Selenium\Magnus.Futbot.Selenium.csproj" />
     <ProjectReference Include="..\Magnus.Futbot.Storage\Magnus.Futbot.Storage.csproj" />
+    <ProjectReference Include="..\Magnus.Futtbot.Connections\Magnus.Futtbot.Connections.csproj" />
   </ItemGroup>
 
 </Project>
