--- a/Magnus.Futtbot.Connections/Magnus.Futtbot.Connections.csproj
+++ b/Magnus.Futtbot.Connections/Magnus.Futtbot.Connections.csproj
@@ -11,4 +11,9 @@
     <Folder Include="Connection\Trading\Sell\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Magnus.Futbot.Common\Magnus.Futbot.Common.csproj" />
+    <ProjectReference Include="..\Magnus.Futbot.Selenium\Magnus.Futbot.Selenium.csproj" />
+  </ItemGroup>
+
 </Project>
