--- a/Magnus.Futbot.Selenium/Magnus.Futbot.Selenium.csproj
+++ b/Magnus.Futbot.Selenium/Magnus.Futbot.Selenium.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.3.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="117.0.5938.9200" />
+    <PackageReference Include="Titanium.Web.Proxy" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
