--- a/Magnus.Futbot.Api/Magnus.Futbot.Api.csproj
+++ b/Magnus.Futbot.Api/Magnus.Futbot.Api.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="Selenium.WebDriver" Version="4.3.0" />
+    <PackageReference Include="WebDriverManager" Version="2.17.4" />
   </ItemGroup>
 
   <ItemGroup>
