--- a/Magnus.Futbot.Selenium/Magnus.Futbot.Selenium.csproj
+++ b/Magnus.Futbot.Selenium/Magnus.Futbot.Selenium.csproj
@@ -12,8 +12,9 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.3.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="119.0.6045.10500" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="129.0.6668.7000" />
     <PackageReference Include="Titanium.Web.Proxy" Version="3.2.0" />
+    <PackageReference Include="WebDriverManager" Version="2.17.4" />
   </ItemGroup>
 
   <ItemGroup>
