--- a/Magnus.Futbot.Storage/Magnus.Futbot.Storage.csproj
+++ b/Magnus.Futbot.Storage/Magnus.Futbot.Storage.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.13.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="WebDriverManager" Version="2.17.4" />
   </ItemGroup>
 
 </Project>
