--- a/Magnus.Futtbot.Connections/Magnus.Futtbot.Connections.csproj
+++ b/Magnus.Futtbot.Connections/Magnus.Futtbot.Connections.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="WebDriverManager" Version="2.17.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Magnus.Futbot.Common\Magnus.Futbot.Common.csproj" />
     <ProjectReference Include="..\Magnus.Futbot.Selenium\Magnus.Futbot.Selenium.csproj" />
   </ItemGroup>
