--- a/Magnus.Futbot.Api/appsettings.Development.json
+++ b/Magnus.Futbot.Api/appsettings.Development.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Magnus:URLS:SSO:Api": "https://localhost:7206/api",
-  "DB:Futbot:Username": "FidoDidoo100",
-  "DB:Futbot:Password": "A123123123a",
-  "DB:Futbot:Cluster": "fbcluster",
-  "DB:Futbot:Collection": "futbot"
+  "Magnus:URLS:SSO:Api": "https://localhost:7206/api"
 }
