--- a/Magnus.Futbot.Api/appsettings.json
+++ b/Magnus.Futbot.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DB:Futbot:Username": "FidoDidoo100",
+  "DB:Futbot:Password": "A123123123a",
+  "DB:Futbot:Cluster": "fbcluster",
+  "DB:Futbot:Collection": "futbot"
 }
