--- a/Magnus.Futbot.Api/appsettings.json
+++ b/Magnus.Futbot.Api/appsettings.json
@@ -6,6 +6,8 @@
     }
   },
   "AllowedHosts": "*",
+  "Magnus:URLS:SSO:Api": "https://cwsn3idhp0.execute-api.eu-north-1.amazonaws.com/dev/api",
+  //"Magnus:URLS:SSO:Api": "https://localhost:7206/api",
   "DB:Futbot:Username": "FidoDidoo100",
   "DB:Futbot:Password": "A123123123a",
   "DB:Futbot:Cluster": "fbcluster",
