Промени по взимането на картите

--- a/Magnus.Futbot.Api/appsettings.Development.json
+++ b/Magnus.Futbot.Api/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "EA:PLAYERS:GET:URL":  "https://drop-api.ea.com/rating/ea-sports-fc?locale=en&limit=100&offset=0"
 }
