--- a/Magnus.Futbot.Initializer/Magnus.Futbot.Initializer.csproj
+++ b/Magnus.Futbot.Initializer/Magnus.Futbot.Initializer.csproj
@@ -17,5 +17,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Magnus.Futbot.Common\Magnus.Futbot.Common.csproj" />
+    <ProjectReference Include="..\Magnus.Futbot.Database\Magnus.Futbot.Database.csproj" />
   </ItemGroup>
 </Project>
